--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "name": "auracash",
+  "version": "1.0.0",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
