--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "auracash",
   "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
